# django_demo

./: .dockerignore  .env.templ  .gitignore  Dockerfile  README.md  demo.sh  dev-requirements.in  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  update-deps.sh
backend/app/: asgi.py  context_processors.py  views.py
backend/app/admin/: __init__.py  model_admin.py
backend/app/api/: schema.py  viewsets.py
backend/app/middleware/: load_delay.py
backend/app/models/: __init__.py  word_similarity.py
backend/app/settings/: __init__.py  auth.py  common.py  db.py  env.py  i18n.py  installed_apps.py  middleware.py  static.py  storage.py
backend/app/templates/: _loader.html  _pagination.html  base.html  base_turbo.html  bootstrap.html
backend/app/templatetags/: app_extras.py
backend/app/test/: fixtures.py
backend/app/urls/: __init__.py  api.py  v1.py
backend/branches/: admin.py  filters.py  models.py  urls.py  views.py
backend/branches/api/: filters.py  serializers.py  urls.py  views.py
backend/branches/migrations/: 0001_initial.py  0002_search.py  0004_alter_branch_id.py
backend/branches/tests/: conftest.py  factories.py  test_api.py  test_models.py
backend/branches/views/: classic.py  turbo.py
backend/employees/: admin.py  filters.py  models.py  urls.py  views.py
backend/employees/api/: filters.py  pagination.py  serializers.py  urls.py  views.py
backend/employees/migrations/: 0001_initial.py  0002_search.py  0004_alter_employee_id.py
backend/employees/tests/: conftest.py  factories.py  test_api.py  test_models.py
backend/employees/views/: classic.py  turbo.py
backend/static_src/: styles.css
db/: Dockerfile
src/: .env.templ  conftest.py  data.json  fixtures.json  setup.cfg
src/app/: urls.py  utils.py
src/app/admin/: __init__.py  model_admin.py
src/app/api/: filters.py  renderers.py
src/app/migrations/: 0001_initial.py
src/app/models/: __init__.py  base.py
src/app/roles/: __init__.py  map_editor.py
src/app/settings/: __init__.py  api.py  auth.py  common.py  db.py  env.py  http.py  i18n.py  installed_apps.py  media.py  static.py
src/app/test/: __init__.py
src/branches/: admin.py  models.py  urls.py
src/branches/api/: filters.py  serializers.py
src/branches/migrations/: 0001_initial.py  0002_search.py  0003_indexes.py
src/branches/tests/: conftest.py  factories.py  test_api.py  test_models.py
src/employees/: admin.py  models.py
(+31 files in other folders)
